--- a/test_plots.ipynb
+++ b/test_plots.ipynb
@@ -291,7 +291,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "jax_saad_solla_clean",
+   "display_name": "jax_metal_gpu",
    "language": "python",
    "name": "python3"
   },
@@ -305,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.12"
   }
  },
  "nbformat": 4,
