corrected all expectations

--- a/test_plots.ipynb
+++ b/test_plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "c748c767",
    "metadata": {},
    "outputs": [
@@ -10,12 +10,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
       "SLURM_CPUS_PER_TASK: 0\n",
       "OMP_NUM_THREADS: 0\n",
-      "os.cpu_count(): 32\n",
-      "[JAX CONFIG] Using 32 CPU threads\n"
+      "os.cpu_count(): 40\n",
+      "[JAX CONFIG] Using 40 CPU threads\n"
      ]
     }
    ],
@@ -51,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "23c9b637",
    "metadata": {},
    "outputs": [],
@@ -67,13 +65,13 @@
     "\n",
     "D=400\n",
     "n=2\n",
-    "epochs=500\n",
+    "epochs=100\n",
     "savepoints=100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "46381e7c",
    "metadata": {},
    "outputs": [],
@@ -91,10 +89,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "10401ff7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SLURM_CPUS_PER_TASK: 0\n",
+      "OMP_NUM_THREADS: 40\n",
+      "os.cpu_count(): 40\n",
+      "[JAX CONFIG] Using 40 CPU threads\n"
+     ]
+    },
+    {
+     "ename": "TracerArrayConversionError",
+     "evalue": "The numpy.ndarray conversion method __array__() was called on traced array with shape float32[]\nThe error occurred while tracing the function scanned_fun at /nfs/nhome/live/npatel/miniforge3/envs/jax_saad_solla_clean/lib/python3.12/site-packages/jax/_src/lax/control_flow/loops.py:1945 for scan. This concrete value was not available in Python because it depends on the values of the arguments loop_carry[1][0], loop_carry[1][1], loop_carry[1][2], loop_carry[1][3], and loop_carry[1][4].\nSee https://jax.readthedocs.io/en/latest/errors.html#jax.errors.TracerArrayConversionError",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTracerArrayConversionError\u001b[0m                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m J_1_s_ode, J_2_s_ode, Q_1_s_ode, Q_2_s_ode, Q_12_s_ode \u001b[38;5;241m=\u001b[39m \u001b[43mmain_ode\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mODE_solver\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mr_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mr_2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mr_12\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtau_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtau_2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43mD\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mepochs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msavepoints\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[43m               \u001b[49m\u001b[43mJ_1_init\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mJ_2_init\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQ_1_init\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQ_2_init\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQ_12_init\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mS\u001b[49m\u001b[43m)\u001b[49m\n",
+      "    \u001b[0;31m[... skipping hidden 11 frame]\u001b[0m\n",
+      "File \u001b[0;32m~/projects/Collective-learning-/main_ode.py:217\u001b[0m, in \u001b[0;36mODE_solver\u001b[0;34m(eta, T, r_1, r_2, r_12, tau_1, tau_2, dt, epochs, savepoints, J_1_init, J_2_init, Q_1_init, Q_2_init, Q_12_init, S)\u001b[0m\n\u001b[1;32m    214\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m new_state, new_state\n\u001b[1;32m    216\u001b[0m \u001b[38;5;66;03m# ---- Run scan over deltas ----\u001b[39;00m\n\u001b[0;32m--> 217\u001b[0m _, trajectory \u001b[38;5;241m=\u001b[39m \u001b[43mlax\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mscan\u001b[49m\u001b[43m(\u001b[49m\u001b[43mscan_body\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minit_state\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdeltas\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    219\u001b[0m \u001b[38;5;66;03m# ---- Split results ----\u001b[39;00m\n\u001b[1;32m    220\u001b[0m J_1_s, J_2_s, Q_1_s, Q_2_s, Q_12_s \u001b[38;5;241m=\u001b[39m trajectory\n",
+      "    \u001b[0;31m[... skipping hidden 9 frame]\u001b[0m\n",
+      "File \u001b[0;32m~/projects/Collective-learning-/main_ode.py:212\u001b[0m, in \u001b[0;36mODE_solver.<locals>.scan_body\u001b[0;34m(carry, delta)\u001b[0m\n\u001b[1;32m    209\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21minner_loop\u001b[39m(_, state):\n\u001b[1;32m    210\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m update_D_times(dt, eta, T, r_1, r_2, r_12, tau_1, tau_2, \u001b[38;5;241m*\u001b[39mstate, S)\n\u001b[0;32m--> 212\u001b[0m new_state \u001b[38;5;241m=\u001b[39m \u001b[43mlax\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfori_loop\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdelta\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minner_loop\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43mJ_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mJ_2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQ_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQ_2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQ_12\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    214\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m new_state, new_state\n",
+      "    \u001b[0;31m[... skipping hidden 12 frame]\u001b[0m\n",
+      "File \u001b[0;32m~/projects/Collective-learning-/main_ode.py:210\u001b[0m, in \u001b[0;36mODE_solver.<locals>.scan_body.<locals>.inner_loop\u001b[0;34m(_, state)\u001b[0m\n\u001b[1;32m    209\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21minner_loop\u001b[39m(_, state):\n\u001b[0;32m--> 210\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mupdate_D_times\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43meta\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mr_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mr_2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mr_12\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtau_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtau_2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mstate\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mS\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/projects/Collective-learning-/main_ode.py:184\u001b[0m, in \u001b[0;36mupdate_D_times\u001b[0;34m(dt, eta, T, r_1, r_2, r_12, tau_1, tau_2, J_1, J_2, Q_1, Q_2, Q_12, S)\u001b[0m\n\u001b[1;32m    179\u001b[0m     dQ_12 \u001b[38;5;241m=\u001b[39m dQ_ij(T, eta, r_1, r_2, r_12, tau_1, tau_2, mod1, mod2, sgn1_2, sgn2_1, sgnNu_1, sgnNu_2, sgn12, sgnNu1, \n\u001b[1;32m    180\u001b[0m                   sgnNu2, sgn1Nu_mod2, sgn2Nu_mod1, P_1, P_2, P_12, P_12_collab) \u001b[38;5;241m*\u001b[39m dt\n\u001b[1;32m    182\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m J_1 \u001b[38;5;241m+\u001b[39m dJ_1, J_2 \u001b[38;5;241m+\u001b[39m dJ_2, Q_1 \u001b[38;5;241m+\u001b[39m dQ_1, Q_2 \u001b[38;5;241m+\u001b[39m dQ_2, Q_12 \u001b[38;5;241m+\u001b[39m dQ_12\n\u001b[0;32m--> 184\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mlax\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfori_loop\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mD\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbody\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43mJ_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mJ_2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQ_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQ_2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQ_12\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "    \u001b[0;31m[... skipping hidden 12 frame]\u001b[0m\n",
+      "File \u001b[0;32m~/projects/Collective-learning-/main_ode.py:173\u001b[0m, in \u001b[0;36mupdate_D_times.<locals>.body\u001b[0;34m(_, state)\u001b[0m\n\u001b[1;32m    166\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mbody\u001b[39m(_, state):\n\u001b[1;32m    167\u001b[0m     J_1, J_2, Q_1, Q_2, Q_12 \u001b[38;5;241m=\u001b[39m state\n\u001b[1;32m    169\u001b[0m     P_1, P_2, P_12, P_12_collab, \\\n\u001b[1;32m    170\u001b[0m     sgn12_modNu, sgn1Nu_mod2, sgn2Nu_mod1, \\\n\u001b[1;32m    171\u001b[0m     sgn1_Nu, sgn2_Nu, sgnNu_1, sgnNu_2, sgn1_2, sgn2_1, \\\n\u001b[1;32m    172\u001b[0m     sgn12, sgnNu1, sgnNu2, \\\n\u001b[0;32m--> 173\u001b[0m     mod1, mod2, modNu \u001b[38;5;241m=\u001b[39m \u001b[43mCompute_expectations\u001b[49m\u001b[43m(\u001b[49m\u001b[43mQ_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQ_2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQ_12\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mJ_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mJ_2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mS\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    175\u001b[0m     dJ_1 \u001b[38;5;241m=\u001b[39m dJ_i(T, eta, r_1, r_2, r_12, tau_2, sgn1_Nu, sgn2_Nu, sgn12_modNu, modNu, P_1, P_2, P_12_collab) \u001b[38;5;241m*\u001b[39m dt\n\u001b[1;32m    176\u001b[0m     dJ_2 \u001b[38;5;241m=\u001b[39m dJ_i(T, eta, r_2, r_1, r_12, tau_1, sgn2_Nu, sgn1_Nu, sgn12_modNu, modNu, P_2, P_1, P_12_collab) \u001b[38;5;241m*\u001b[39m dt\n",
+      "File \u001b[0;32m~/projects/Collective-learning-/main_ode.py:109\u001b[0m, in \u001b[0;36mCompute_expectations\u001b[0;34m(Q_1, Q_2, Q_12, J_1, J_2, S)\u001b[0m\n\u001b[1;32m    103\u001b[0m P_12_collab \u001b[38;5;241m=\u001b[39m Heavi12_negheavi12Nu(J_1, J_2, Q_1, Q_2, Q_12, S)\n\u001b[1;32m    105\u001b[0m \u001b[38;5;66;03m#sgn12_modNu = Sgn12_modNu(Q_1, Q_2, S, J_1, J_2, Q_12)\u001b[39;00m\n\u001b[1;32m    106\u001b[0m \u001b[38;5;66;03m#sgn1Nu_mod2 = Sgn1Nu_mod2(Q_1, Q_2, S, J_1, J_2, Q_12)\u001b[39;00m\n\u001b[1;32m    107\u001b[0m \u001b[38;5;66;03m#sgn2Nu_mod1 = Sgn2Nu_mod1(Q_1, Q_2, S, J_1, J_2, Q_12)\u001b[39;00m\n\u001b[0;32m--> 109\u001b[0m sgn12_modNu \u001b[38;5;241m=\u001b[39m \u001b[43mSgn12_modNu\u001b[49m\u001b[43m(\u001b[49m\u001b[43mQ_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQ_2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mS\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mJ_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mJ_2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQ_12\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    110\u001b[0m sgn1Nu_mod2 \u001b[38;5;241m=\u001b[39m SgnXY_modZ(Q_1, S, Q_2, Q_12, J_2, J_1)\n\u001b[1;32m    111\u001b[0m sgn2Nu_mod1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
+      "File \u001b[0;32m~/projects/Collective-learning-/main_ode.py:90\u001b[0m, in \u001b[0;36mSgn12_modNu\u001b[0;34m(Q_1, Q_2, S, J_1, J_2, Q_12)\u001b[0m\n\u001b[1;32m     88\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mSgn12_modNu\u001b[39m(Q_1, Q_2, S, J_1, J_2, Q_12):\n\u001b[1;32m     89\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m (\u001b[38;5;241m2\u001b[39m \u001b[38;5;241m*\u001b[39m np\u001b[38;5;241m.\u001b[39msqrt(\u001b[38;5;241m2\u001b[39m) \u001b[38;5;241m/\u001b[39m (np\u001b[38;5;241m.\u001b[39mpi \u001b[38;5;241m*\u001b[39m np\u001b[38;5;241m.\u001b[39msqrt(np\u001b[38;5;241m.\u001b[39mpi)) \u001b[38;5;241m*\u001b[39m \n\u001b[0;32m---> 90\u001b[0m             (np\u001b[38;5;241m.\u001b[39msqrt(S) \u001b[38;5;241m*\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marcsin\u001b[49m\u001b[43m(\u001b[49m\u001b[43mRhoXY_Z\u001b[49m\u001b[43m(\u001b[49m\u001b[43mQ_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQ_2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mS\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mJ_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mJ_2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQ_12\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     91\u001b[0m               \u001b[38;5;241m+\u001b[39m J_1 \u001b[38;5;241m/\u001b[39m np\u001b[38;5;241m.\u001b[39msqrt(Q_1) \u001b[38;5;241m*\u001b[39m np\u001b[38;5;241m.\u001b[39marcsin(RhoXY_Z(Q_2, S, Q_1, Q_12, J_1, J_2))\n\u001b[1;32m     92\u001b[0m                 \u001b[38;5;241m+\u001b[39m J_2 \u001b[38;5;241m/\u001b[39m np\u001b[38;5;241m.\u001b[39msqrt(Q_2) \u001b[38;5;241m*\u001b[39m np\u001b[38;5;241m.\u001b[39marcsin(RhoXY_Z(Q_1, S, Q_2, Q_12, J_2, J_1))))\n",
+      "File \u001b[0;32m~/miniforge3/envs/jax_saad_solla_clean/lib/python3.12/site-packages/jax/_src/core.py:714\u001b[0m, in \u001b[0;36mTracer.__array__\u001b[0;34m(self, *args, **kw)\u001b[0m\n\u001b[1;32m    713\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__array__\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkw):\n\u001b[0;32m--> 714\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m TracerArrayConversionError(\u001b[38;5;28mself\u001b[39m)\n",
+      "\u001b[0;31mTracerArrayConversionError\u001b[0m: The numpy.ndarray conversion method __array__() was called on traced array with shape float32[]\nThe error occurred while tracing the function scanned_fun at /nfs/nhome/live/npatel/miniforge3/envs/jax_saad_solla_clean/lib/python3.12/site-packages/jax/_src/lax/control_flow/loops.py:1945 for scan. This concrete value was not available in Python because it depends on the values of the arguments loop_carry[1][0], loop_carry[1][1], loop_carry[1][2], loop_carry[1][3], and loop_carry[1][4].\nSee https://jax.readthedocs.io/en/latest/errors.html#jax.errors.TracerArrayConversionError"
+     ]
+    }
+   ],
    "source": [
     "J_1_s_ode, J_2_s_ode, Q_1_s_ode, Q_2_s_ode, Q_12_s_ode = main_ode.ODE_solver(lr, T, r_1, r_2, r_12, tau_1, tau_2, 1/D, epochs, savepoints, \n",
     "               J_1_init, J_2_init, Q_1_init, Q_2_init, Q_12_init, S)"
@@ -291,7 +323,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "jax_metal_gpu",
+   "display_name": "jax_saad_solla_clean",
    "language": "python",
    "name": "python3"
   },
@@ -305,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.12"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
