--- a/test_expectations.ipynb
+++ b/test_expectations.ipynb
@@ -1426,7 +1426,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "jax_saad_solla_clean",
+   "display_name": "jax_metal_gpu",
    "language": "python",
    "name": "python3"
   },
@@ -1440,7 +1440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.12"
   }
  },
  "nbformat": 4,
