added sweep plotting capability

--- a/plotting/double_sweep_template.ipynb
+++ b/plotting/double_sweep_template.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "764ef4dd",
    "metadata": {},
    "outputs": [],
@@ -20,12 +20,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "119b40d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "rootdir = \"/nfs/nhome/live/npatel/projects/Collective-learning-/ceph_logs/sweep_test/r_2_sigma1_sweep/2025-05-07_09-16-49/T6lr1.0r_11.0rho0delta0sigma21.0epsilon0.0baselineTrueepochs1000savepoints100\"\n",
+    "rootdir = \"/nfs/nhome/live/npatel/projects/Collective-learning-/plotting/collective_learning/test_ode/2025-09-14_09-22-18/T2lr1.0r_11.0r_21.0r_120.0tau_10.0tau_20.0J_10.073J_2-0.0238Q_10.989Q_21.02Q_12-0.00716S0.967epochs100savepoints100\"\n",
     "df=pd.read_pickle(os.path.join(rootdir, 'ode_results.pkl'))\n",
     "configs = json.load(open(os.path.join(rootdir, 'config.json')))\n",
     "\n",
@@ -43,45 +54,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "320330fd",
+   "execution_count": 17,
+   "id": "c4b8ec85",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "\n",
-    "if 'r_1' in configs['sweep']:\n",
-    "    r_1_s = np.array(configs['sweep']['r_1'])\n",
+    "if 'r_1s' in configs['sweep']:\n",
+    "    r_1_s = np.array(configs['sweep']['r_1s'])\n",
     "else:\n",
-    "    r_1 = np.array(configs['fixed']['r_1'])\n",
+    "    r_1 = np.array(configs['fixed']['r_1s'])\n",
     "\n",
-    "if 'r_2' in configs['sweep']:\n",
-    "    r_2_s = np.array(configs['sweep']['r_2'])\n",
+    "if 'r_2s' in configs['sweep']:\n",
+    "    r_2_s = np.array(configs['sweep']['r_2s'])\n",
     "else:\n",
-    "    r_2 = np.array(configs['fixed']['r_2'])\n",
+    "    r_2 = np.array(configs['fixed']['r_2s'])\n",
     "\n",
-    "if 'r_12' in configs['sweep']:\n",
-    "    r_12_s = np.array(configs['sweep']['r_12'])\n",
+    "if 'r_12s' in configs['sweep']:\n",
+    "    r_12_s = np.array(configs['sweep']['r_12s'])\n",
     "else:\n",
-    "    r_12 = np.array(configs['fixed']['r_12'])\n",
+    "    r_12 = np.array(configs['fixed']['r_12s'])\n",
     "\n",
-    "if 'tau_1' in configs['sweep']:\n",
-    "    tau_1_s = np.array(configs['sweep']['tau_1'])\n",
+    "if 'tau_1s' in configs['sweep']:\n",
+    "    tau_1_s = np.array(configs['sweep']['tau_1s'])\n",
     "else:\n",
-    "    tau_1 = np.array(configs['fixed']['tau_1'])\n",
+    "    tau_1 = np.array(configs['fixed']['tau_1s'])\n",
     "\n",
-    "if 'tau_2' in configs['sweep']:\n",
-    "    tau_2_s = np.array(configs['sweep']['tau_2'])\n",
+    "if 'tau_2s' in configs['sweep']:\n",
+    "    tau_2_s = np.array(configs['sweep']['tau_2s'])\n",
     "else:\n",
-    "    tau_2 = np.array(configs['fixed']['tau_2'])\n"
+    "    tau_2 = np.array(configs['fixed']['tau_2s'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8401594d",
+   "execution_count": 18,
+   "id": "320330fd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'lr': 1.0, 'r_1': 1.0, 'r_2': 1.0, 'tau_1': 0.0, 'tau_2': 0.0, 'J_1_init': 0.07301539468923571, 'J_2_init': -0.02381823273429834, 'Q_1_init': 0.988561558575577, 'Q_2_init': 1.0177215858998647, 'Q_12_init': -0.007158579290475447, 'S': 0.9672523256140616}\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "set the fixed parameters\n",
@@ -96,10 +115,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
+   "id": "564c50c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9672523256140616"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "configs['fixed']['Ss'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "644599a8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Ts'} [2, 3, 4]\n",
+      "{'r_12s'} [0.0, 10.0, 20.0]\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "print swept parameters and values\n",
@@ -131,7 +180,7 @@
     "sweep_param_name (name of the parameter being swept over)\n",
     "second_param_name (name of the secondary parameter being 'swept' over)\n",
     "\"\"\"\n",
-    "def plot_variable(df_filtered, variable, sweep_params, second_params, sweep_param_name, second_param_name, log_epochs):\n",
+    "def plot_variable(df_filtered, variable, sweep_params, second_params, sweep_param_name, second_param_name, S, log_epochs):\n",
     "    sweep_length = len(sweep_params)\n",
     "    second_sweep_length = len(second_params)\n",
     "\n",
@@ -173,23 +222,38 @@
     "    else:\n",
     "        epsilons = configs['fixed']['epsilons'] * sweep_length\n",
     "\n",
-    "    fig, axes = plt.subplots(len(second_params), 2, figsize=(10, 3*len(second_params)), sharex=True)\n",
+    "    fig, axes = plt.subplots(len(second_params), 3, figsize=(10, 3*len(second_params)), sharex=True)\n",
     "    for i, second_param in enumerate(second_params):\n",
     "        df_filtered_new = df_filtered.xs(second_param, level=second_param_name)\n",
     "        for param, row in df_filtered_new.iterrows():\n",
-    "            R = row['R']\n",
-    "            Qr = row['Qr']\n",
-    "            Qi = row['Qi']\n",
-    "            \n",
+    "            J_1 = row['J_1']\n",
+    "            J_2 = row['J_2']\n",
+    "            Q_1 = row['Q_1']\n",
+    "            Q_2 = row['Q_2']\n",
+    "            Q_12 = row['Q_12']\n",
     "\n",
-    "        for var, ax in zip(['R', 'Qr', 'Qi'], axes[i,:]):\n",
-    "            for rho_val, row in df_filtered_new.iterrows():\n",
-    "                ax.plot(log_epochs, row[var], label=f\"delta={rho_val:.3g}\")\n",
-    "            ax.set_title(f\"{var} vs time (sweep over delta)\")\n",
-    "            ax.set_ylabel(var)\n",
-    "            ax.grid(True)\n",
-    "            #ax.legend()\n",
-    "            ax.set_xscale('log')\n",
+    "            axes[i,0].plot(log_epochs, J_1/np.sqrt(Q_1*S), label=f\"{second_param_name}={second_param:.3g}\")\n",
+    "            axes[i,1].plot(log_epochs, J_2/np.sqrt(Q_2*S), label=f\"{second_param_name}={second_param:.3g}\")\n",
+    "            axes[i,2].plot(log_epochs, Q_12/np.sqrt(Q_1*Q_2), label=f\"{second_param_name}={second_param:.3g}\")\n",
+    "\n",
+    "            axes[i,0].set_title(f\"rho_1 vs time (sweep over {sweep_param_name})\")\n",
+    "            axes[i,1].set_title(f\"rho_2 vs time (sweep over {sweep_param_name})\")\n",
+    "            axes[i,2].set_title(f\"12_overlap vs time (sweep over {sweep_param_name})\")\n",
+    "\n",
+    "            \"\"\"axes[i,0].legend()\n",
+    "            axes[i,1].legend()\n",
+    "            axes[i,2].legend()\"\"\"\n",
+    "\n",
+    "            axes[i,0].set_ylabel('rho_1')\n",
+    "            axes[i,1].set_ylabel('rho_2')\n",
+    "            axes[i,2].set_ylabel('12_overlap')\n",
+    "            axes[i,0].grid(True)\n",
+    "            axes[i,1].grid(True)\n",
+    "            axes[i,2].grid(True)\n",
+    "            axes[i,0].set_xscale('log')\n",
+    "            axes[i,1].set_xscale('log')\n",
+    "            axes[i,2].set_xscale('log')\n",
+    "\n",
     "\n",
     "        for param in sweep_params:\n",
     "            try:\n",
@@ -213,8 +277,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "jax_saad_solla_clean",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
